--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8" />
   <title>HTML Academy: Погнали</title>
-  <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -33,11 +32,11 @@
         </li>
       </ul>
       <button class="modal-window__close-modal">
-        ЗАКРЫТЬ ОКНО
+        закрыть окно
       </button>
     </div>
   </div>
-  <header class="header">
+  <header class="header header--bg-color">
     <div class="header__wrapper wrapper">
       <div class="logo-and-btn">
         <a class="logo-link" href="index.html">
@@ -52,16 +51,16 @@
         </div>
         <ul class="main-nav__list">
           <li class="main-nav__list-item">
-            <a class="main-nav__list-item-link" href="blankpage.html">О СЕРВИСЕ</a>
+            <a class="main-nav__list-item-link" href="blankpage.html">о сервсисе</a>
           </li>
           <li class="main-nav__list-item">
-            <a class="main-nav__list-item-link" href="form.html">НАПРАВЛЕНИЯ</a>
+            <a class="main-nav__list-item-link" href="form.html">направления</a>
           </li>
           <li class="main-nav__list-item">
-            <a class="main-nav__list-item-link" href="catalog.html">ПОПУТЧИКИ</a>
+            <a class="main-nav__list-item-link" href="catalog.html">попутчик</a>
           </li>
         </ul>
-        <a class="authorization-link" href="auth.html">АВТОРИЗАЦИЯ</a>
+        <a class="authorization-link" href="auth.html">авторизация</a>
         <div class="main-nav__contacts">
           <div class="phone-block">
             <svg class="phone-block__icon" width="45" height="45" viewBox="0 0 45 45" fill="none"
@@ -152,7 +151,7 @@
                 fill="" />
             </svg>
           </a>
-          <a class="authorization-link authorization-link--small" href="auth.html">АВТОРИЗАЦИЯ</a>
+          <a class="authorization-link authorization-link--small" href="auth.html">авторизация</a>
         </div>
         <blockquote class="promo__quote">
           «Лучшее приложение,
@@ -374,7 +373,7 @@
             <p class="mark-level__progress-name">level</p>
           </div>
           <div class="user-card__info">
-            <div class="user-card__online-status online-status--active"></div>
+            <div class="user-card__online-status"></div>
             <h3 class="user-card__user-name user-card__user-name--online">Петя Демин</h3>
             <p class="user-card__user-hobbies">
               #бургер #бар #футбол #концерт #крафт
