--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
 
 <body class="body">
   <header class="header">
-    <div class="page-header__wrapper wrapper">
+    <div class="header__wrapper wrapper">
       <a class="logo-link" href="index.html">
         <img class="logo" src="/source/img/logo-pognali.svg" alt="Логотип Погнали" width="96" height="15" />
       </a>
