--- a/source/form.html
+++ b/source/form.html
@@ -261,17 +261,17 @@
               или сразу несколько.
             </p>
             <div class="plans-step__choose-block">
-              <input class="plans-step__choose-country" type="text" placeholder="БОСНИЯ И ГЕРЦЕГОВИна" id="country1" />
+              <input class="plans-step__choose-country" type="text" placeholder="босния И герцеговинана" id="country1" />
               <img class="plans-step__country-icon" src="https://placekitten.com/35/24" alt="country-flag" width="35"
                 height="24" />
             </div>
             <div class="plans-step__choose-block">
-              <input class="plans-step__choose-country" type="text" placeholder="ЧЕХИЯ" id="country2" />
+              <input class="plans-step__choose-country" type="text" placeholder="чехия" id="country2" />
               <img class="plans-step__country-icon" src="https://placekitten.com/35/24" alt="country-flag" width="35"
                 height="24" />
             </div>
-            <input class="plans-step__choose-country plans-step__choose-country--full-width" type="text" placeholder="ВЫБЕРИТЕ СТРАНУ" id="country3"/>
-            <input class="plans-step__choose-country plans-step__choose-country--full-width" type="text" placeholder="ДОБАВИТЬ СТРАНУ" id="add-button" />
+            <input class="plans-step__choose-country plans-step__choose-country--full-width" type="text" placeholder="выберите страну" id="country3"/>
+            <input class="plans-step__choose-country plans-step__choose-country--full-width" type="text" placeholder="добавить страну" id="add-button" />
             <a class="plans-step__some-step plans-step__some-step--backgroung" href="#plans-step3">следующий шаг</a>
             <a class="plans-step__some-step plans-step__some-step--back" href="#plans-step1">на шаг назад</a>
           </div>
