--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body class="body page__body">
+<body class="body">
   <div class="modal-window business-rates-modal visually-hidden">
     <div class="business-rates-modal__wrapper wrapper">
       <h2 class="section-title section-title--margin">
